syntax = "proto3";

package arduino;

option go_package = "github.com/arduino/arduino-cli/rpc";

import "common.proto";

message BoardDetailsReq {
  Instance instance = 1;
  string fqbn = 2;
}

message BoardDetailsResp {
  string name = 2;
  repeated ConfigOption config_options = 3;
  repeated RequiredTool required_tools = 4;
}

message ConfigOption {
  string option = 1;
  string option_label = 2;
  repeated ConfigValue values = 3;
}

message ConfigValue {
  string value = 1;
  string value_label = 2;
  bool selected = 3;
}

message RequiredTool {
  string name = 1;
  string version = 2;
  string packager = 3;
}
