syntax = "proto3";

package arduino;

option go_package = "github.com/arduino/arduino-cli/rpc";

import "common.proto";

message PlatformInstallReq {
    Instance instance =1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformInstallResp {
	DownloadProgress progress = 1;
	TaskProgress task_progress = 2;
}

message PlatformDownloadReq {
    Instance instance =1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformDownloadResp {
	DownloadProgress progress = 1;
}


message PlatformUninstallReq {
    Instance instance =1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformUninstallResp {
	TaskProgress task_progress = 1;
}

message PlatformUpgradeReq {
    Instance instance =1;
	string platform_package  = 2;
	string architecture = 3;
	string version = 4;
}

message PlatformUpgradeResp {
	DownloadProgress progress = 1;
	TaskProgress task_progress = 2;
}
